[package]
name = "hyber_raqote"
version = "0.1.0"
authors = ["jerbubias <samuelbouteiro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hyber_raqote"              # The name of the target.
path = "src/lib.rs"         # The source file of the target.
test = true                 # Is tested by default.
doctest = true              # Documentation examples are tested by default.
bench = true                # Is benchmarked by default.
doc = true                  # Is documented by default.
crate-type = ["lib"]        # The crate types to generate.
required-features = []      # Features required to build this target (N/A for lib).

[dependencies]
# minifb - Used for Display/Window management
minifb = "0.19.1"

# hyber - The library to implement on raqote
hyber =  { path = "D:\\UC\\Rust\\hyber" }

# raqote - Used for the 2d rendering context
raqote = "^0.8.0"

# euclid - Used for some geometry operations
euclid = "^0.20.14"

# font_kit - Used for the fonts
font-kit = "^0.7.1"

#image
image = "^0.23.0"