[package]
name = "hyber_raqote"
version = "0.1.0"
authors = ["jerbubias <samuelbouteiro@gmail.com>"]
edition = "2018"

[dependencies]
# minifb - Used for Display/Window management
minifb = "0.19.1"

# hyber - The library to implement on raqote
# hyber =  { path = "C:\\Users\\Claubit\\Documents\\GitHub\\hyber"}
# hyber =  { path = "C:\\Users\\cfpgo\\Documents\\GitHub\\hyber"}
# hyber =  { path = "/home/samuel/Documents/GitHub/hyber" }
 hyber =  { path = "C:\\Users\\Samuel\\Documents\\GitHub\\hyber" }
# hyber =  { path = "C:\\Users\\diogo\\Documents\\Faculdade\\GP\\projects\\hyber" }
# hyber =  { path = "D:\\UC\\Rust\\hyber" }
# hyber = {path = "C:\\Users\\migue\\Downloads\\Universidade\\GestaoProjetos\\hyber"}
# hyber =  { path = "/Users/joaosantos/Development/Hyber/hyber"}

# raqote - Used for the 2d rendering context
raqote = "^0.8.0"

# font_kit - Used for the fonts
font-kit = "^0.7.1"

#image
image = "^0.23.0"