[package]
name = "hyber_raqote"
version = "0.1.0"
authors = ["jerbubias <samuelbouteiro@gmail.com>"]
edition = "2018"

[dependencies]
# minifb - Used for Display/Window management
minifb = "0.19.1"

# hyber - The library to implement on raqote
hyber =  { git = "https://github.com/hyber-gp/hyber.git"}

# raqote - Used for the 2d rendering context
raqote = "^0.8.0"

# font_kit - Used for the fonts
font-kit = "^0.7.1"

#image
image = "^0.23.0"